<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Budget Balance</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="project_add">Add new project</string>
    <string name="projects">Projects</string>
    <string name="title_activity_project_navigation">ProjectNavigation</string>
    <string name="title_section_overview">Overview</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="participantsCount">Count of Participants: </string>
    <string name="administrator">Administrator:</string>
    <string name="Expenses">Expenses: </string>
    <string name="finalize">Finalize</string>
    <string name="addItem">Add Item</string>
    <string name="username">Username</string>
    <string name="username_summary">Choose your name to be used by Budget Balance</string>
    <string name="enter_username">Enter your Name.</string>
    <string name="date_added">Date</string>
    <string name="item_name">Item name</string>
    <string name="creator">Creator</string>
    <string name="price">Price</string>
    <string name="add_new_item">Add new Item</string>
    <string name="title_activity_add_new_item">Add new item</string>
    <string name="default_currency">Default Currency</string>
    <string name="pref_default_currency">defaultCurrency</string>
    <string name="choose_creator">Choose Creator</string>
    <string name="value">value</string>
    <string name="pref_userName">userName</string>
    <string name="tags">Tags</string>
    <string name="title_activity_new_project">New Project</string>
    <string name="createNewProject">Create New Project</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="description_optional">Description (optional)</string>
    <string name="name:">Name:</string>
    <string name="name">Name</string>
    <string name="create_contact">Create Contact</string>
    <string name="participants">Members:</string>
    <string name="done">Create</string>
    <string name="search_bluetooth">Connect Via Bluetooth</string>
    <string name="create_contact2">+ Contact</string>
    <string name="title_activity_new_contact">New Contact</string>
    <string name="add_new_payer">Add new Payer</string>
    <string name="choose_tags">Choose the tags to add</string>
    <string name="title_activity_first_screen">Budget Balance</string>
    <string name="pref_not_first_started">pref_notFirstStarted</string>
    <string name="pref_user_id">pref_user_id</string>
    <string name="welcome_text">Hello There! Welcome to Budget Balance. Please enter your username:</string>
    <string name="pref_user_unique_id">pref_user_unique_id</string>
    <string name="title_activity_settings">Settings</string>
    <string name="virtual_contact">Create Virtual Contact</string>
    <string name="choose_a_payer">Choose a payer</string>
    <string name="create_a_new_tag">Create a new Tag</string>
    <string name="tag_name">tag name</string>
    <string name="save_item">Save Item</string>
    <string name="illegal_item_name">Illegal item name</string>
    <string name="please_select_a_currency_for_">Please select a Currency for </string>
    <string name="please_enter_a_amount_bigger_than_zero_for_">Please enter a amount bigger then zero for </string>
    <string name="couldnt_add_item_to_db">The item could not be added to the database. There was an SQL-Exception.</string>
    <string name="couldnt_update_item_in_db">The item could not be updated. There was an SQL-Exception.</string>
    <string name="item_successfully_saved">Item successfully saved.</string>
    <string name="loading">Loading…</string>
    <string name="items">Items</string>
    <string name="swiss_franc">Swiss franc</string>
    <string name="please_enter_value">Please enter a value.</string>
    <string name="new_item_was_created">New item was created.</string>
    <string name="delete">Delete</string>
    <string name="delete_items">Delete Items</string>
    <string name="delete_">Delete </string>
    <string name="items_q"> items?</string>
    <string name="item_was_saved">Item was successfully saved</string>
    <string name="add_participants">Add participant</string>
    <string name="payers">Payers</string>
    <string name="share_ratio">Share Ratio</string>
    <string name="please_enter_a_value_between_100_and_0">Please enter a value between 100%% and 0%%.</string>
    <string name="exclude_someone">Exclude someone</string>
    <string name="_for_">for</string>
    <string name="Excluded">Excluded</string>
    <string name="please_enter_a_valid_item_name">Please enter a valid Itemname.</string>
    <string name="contact_successfully_created">Contact was successfully created.</string>
    <string name="name_your_project">Please name your project.</string>
    <string name="enter_a_name">Please enter a name.</string>
    <string name="project_summary_title">Summary</string>
    <string name="nr_of_items">Number of Items:</string>
    <string name="calculate_transactions">Calculate Transactions</string>
    <string name="tag_filter">Tagfilter</string>
    <string name="title_activity_transactions">Transactions</string>
    <string name="title_activity_finalize">Finalize</string>
    <string name="title_activity_tags">Tags</string>
    <string name="virtual">Virtual</string>
    <string name="action_delete_project">Delete Project</string>
    <string name="warning_message_project_delete">Are your really sure you want to delete this project? You can not undo it and the project is going to be deleted on every Device that is synced.</string>
    <string name="project_was_deleted_message">Project was deleted on this device and will be deleted on other devices on next sync.</string>
    <string name="member">Member</string>
    <string name="coulnt_delete_participant">Couldn\'t delete Participant </string>
    <string name="because_there_were_still_items_linked_to"> because there where still items linked to.</string>
    <string name="delete_participants">Delete participants</string>
    <string name="participants_questionmark">participants?</string>
    <string name="title_activity_currencies">Currencies</string>
    <string name="add_currency">Add currency</string>
    <string name="currency_code">Currency Code</string>
    <string name="currency_name">Currency Name</string>
    <string name="rate">Exchange Rate</string>
    <string name="create_new_currency">Create new Currency</string>
    <string name="create">Create</string>
    <string name="please_enter_valid_currency_code">Please enter a valid Currencycode.</string>
    <string name="please_enter_valid_currencyname">Please enter a valid Name for the new Currency.</string>
    <string name="please_enter_valid_exchange_rate">Please enter a valid exchange Rate bigger than zero.</string>
    <string name="currency_saved">Currency successfully saved.</string>
    <string name="currencies">Currencies</string>
    <string name="warning_currency_already_exists">The entered Currency already exists. Currencies must differ in Code and Name.</string>
    <string name="delete_currency">Delete Currency</string>
    <string name="warning_delete_currency">The Currency will be removed from the List and can not be used in any project anymore.</string>
    <string name="toast_currency_was_not_deleted">The currency could not be deleted because it is still used by some items</string>
    <string name="update">Update</string>
    <string name="pref_tagfilter">prefTagfilter</string>
    <string name="tagfilter">Tag-filter</string>
    <string name="summary_tagfilter_preference">Configure your Tag-Filter to automatically set the Share-Ratio for items with specific Tags in all projects.</string>
    <string name="package_name">ch.ethz.itet.pps.budgetSplit</string>
    <string name="title_activity_tag_filter">Tag Filter</string>
    <string name="warning_to_many_exclude_items">There must be at least 1 Participant, that pays a 100 % share.</string>
    <string name="choose_someone_to_exclude">Choose someone to exclude from this Item</string>
    <string name="warning_can_not_delete_default_currency">You can not delete your default currency.</string>
    <string name="add_tag">Add Tag</string>
    <string name="depths">Debts:</string>
    <string name="please_enter_valid_value">Please enter a valid value.</string>
    <string name="new_project_created">Project was successfully created.</string>
    <string name="title_activity_activity_tags_gridview_layout">Tags</string>
    <string name="title_activity_contacts__list">Contacts List</string>
    <string name="title_activity_tag_selection">Select Tags</string>
    <string name="add_contact">Add Contact</string>
    <string name="save">Save</string>
    <string name="new_tag">New Tag</string>
    <string name="title_activity_item_tag_chooser">Choose Tags</string>
    <string name="edit_tags">Edit Tags</string>
    <string name="none">none</string>
    <string name="delete_tags">Delete Tags</string>
    <string name="tags_questionmark">Tags?</string>
    <string name="tag_questionmark">Tag?</string>
    <string name="tags_delete_error">One of the selected tags is currently being used in a Tagfilter and can therefore not be deleted.</string>
    <string name="username_error_message">Please enter a valid username</string>
    <string name="contacts_questionmark">Contacts?</string>
    <string name="contact_questionmark">Contact?</string>
    <string name="contacts_delete_error">One of the selected contacts is currently involved in a project and can therefore not be deleted.</string>
    <string name="delete_contacts">Delete Contacts.</string>
    <string name="tag_filter_semi">Tagfilter:</string>
    <string name="spent_semi">Spent:</string>
    <string name="select_participant">Select Participant</string>
    <string name="save_project">Save Project</string>
    <string name="title_activity_choose_contact">Choose contact</string>
    <string name="warning_cant_delete_project_admin">You can\'t delete the project admin.</string>
    <string name="description">Description</string>
    <string name="warning_tag_exists">This Tag already exists</string>

</resources>
