<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextItemName"
        android:hint="@string/item_name"
        android:inputType="text|textNoSuggestions"
        android:singleLine="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tags"
        android:id="@+id/textViewName" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="30dp"
        android:id="@+id/linearLayoutTags"></LinearLayout>

    <Space
        android:layout_width="20px"
        android:layout_height="20px" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/listViewPayers"
        android:layout_weight="1"
        tools:listitem="@layout/activity_add_item_participants_row"
        tools:listfooter="@layout/activity_add_item_participants_footer"
        android:descendantFocusability="beforeDescendants" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addItem"
        android:id="@+id/buttonAddItem"
        android:layout_gravity="right" />
</LinearLayout>