<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal"
              android:id="@+id/linearLayout">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/date_added"
        android:id="@+id/textView_tags_title"
        android:layout_weight="1"
        android:textStyle="bold"
        style="@style/AppTheme.normalText"
        android:layout_marginLeft="@dimen/global_margins"
        android:layout_marginRight="@dimen/global_margins"
        android:textColor="@color/primary_dark_green"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/creator"
        android:id="@+id/textViewCurrencyExchangeRate"
        android:layout_weight="1"
        android:textStyle="bold"
        style="@style/AppTheme.normalText"
        android:layout_marginLeft="@dimen/global_margins"
        android:layout_marginRight="@dimen/global_margins"
        android:textColor="@color/primary_dark_green"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/price"
        android:id="@+id/summary_listview_tags"
        android:layout_weight="1"
        android:textStyle="bold"
        style="@style/AppTheme.normalText"
        android:layout_marginLeft="@dimen/global_margins"
        android:layout_marginRight="@dimen/global_margins"
        android:textColor="@color/primary_dark_green"/>
</LinearLayout>
