<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="ch.ethz.itet.pps.budgetSplit.ProjectOverview"
                android:padding="@dimen/global_margins">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Description"
        android:id="@+id/projectDescription"
        android:textAlignment="center"
        android:textStyle="italic"
        android:layout_alignStart="@+id/textViewAdmin"
        android:layout_margin="@dimen/global_margins"
        android:layout_below="@+id/summary_listview_expences"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/participantsCount"
        android:id="@+id/textViewCreator"
        android:layout_below="@+id/textViewAdmin"
        android:layout_alignParentLeft="true"
        android:layout_margin="@dimen/global_margins"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="nr."
        android:id="@+id/CountOfParticipants"
        android:layout_toEndOf="@+id/textViewCreator"
        android:layout_toRightOf="@+id/textViewCreator"
        android:layout_alignBaseline="@+id/textViewCreator"
        android:layout_margin="@dimen/global_margins"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/administrator"
        android:id="@+id/textViewAdmin"
        android:layout_alignParentLeft="true"
        android:layout_margin="@dimen/global_margins"
        android:layout_alignParentTop="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Admin"
        android:id="@+id/administrator"
        android:layout_toRightOf="@id/textViewAdmin"
        android:layout_alignBaseline="@+id/textViewAdmin"
        android:layout_margin="@dimen/global_margins"></TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Expenses"
        android:id="@+id/summary_listview_expences"
        android:layout_below="@+id/textViewCreator"
        android:layout_alignStart="@+id/textViewCreator"
        android:layout_alignParentLeft="true"
        android:layout_margin="@dimen/global_margins"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Expenses"
        android:id="@+id/expenses"
        android:layout_toRightOf="@+id/summary_listview_expences"
        android:layout_toEndOf="@+id/projectDescription"
        android:layout_alignBaseline="@+id/summary_listview_expences"
        android:layout_margin="@dimen/global_margins"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finalize"
        android:id="@+id/buttonFinalize"
        android:layout_toLeftOf="@+id/buttonAddItem"
        android:layout_margin="@dimen/global_margins"
        android:layout_below="@+id/projectDescription"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addItem"
        android:id="@+id/buttonAddItem"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/global_margins"
        android:layout_below="@+id/projectDescription"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/projectOverviewProgressBar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:layout_margin="@dimen/global_margins"/>
</RelativeLayout>
