<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.ethz.itet.pps.budgetSplit.ProjectSummary">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project_summary_title"
        android:textStyle="bold"
        android:textSize="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:gravity="center_horizontal"
        android:id="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nr_of_items"
        android:textSize="25dp"
        android:id="@+id/fragment_summary_textview_nr_items"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="# Items"
        android:textSize="25dp"
        android:id="@+id/nr_of_Items"
        android:layout_alignBottom="@+id/fragment_summary_textview_nr_items"
        android:layout_toRightOf="@+id/fragment_summary_textview_nr_items"
        android:layout_toEndOf="@+id/fragment_summary_textview_nr_items"
        android:layout_marginLeft="38dp"
        android:layout_alignParentEnd="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:id="@+id/summary_listview_tags"
        android:text="@string/Expenses"
        android:layout_below="@+id/fragment_summary_textview_nr_items"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="# Expenses"
        android:textSize="25dp"
        android:id="@+id/totalExpenses"
        android:layout_alignBottom="@+id/summary_listview_tags"
        android:layout_alignLeft="@+id/nr_of_Items"
        android:layout_alignStart="@+id/nr_of_Items" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_transactions"
        android:id="@+id/fragment_summary_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_summary_listview"
        android:layout_below="@+id/summary_listview_tags"
        android:layout_centerHorizontal="true"
        tools:listitem="@layout/fragment_project_summary_listview_row" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/summaryProgressBar"
        android:layout_below="@+id/fragment_summary_textview_nr_items"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:indeterminate="false" />

</RelativeLayout>
