<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/new_project_window_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/create_contact"
        android:textSize="25dp" />

    <Space
        android:id="@+id/space"
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/new_project_window_title" />

    <TextView
        android:id="@+id/new_project_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/space"
        android:layout_marginTop="84dp"
        android:layout_toLeftOf="@+id/new_project_window_title"
        android:layout_toStartOf="@+id/new_project_window_title"
        android:text="@string/name"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/edit_text_create_contact_name"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/new_project_name_text"
        android:layout_alignEnd="@+id/new_project_window_title"
        android:layout_alignRight="@+id/new_project_window_title"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/search_bluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_contact"
        android:layout_below="@+id/new_project_name_text"
        android:layout_alignLeft="@+id/new_project_name_text"
        android:layout_alignStart="@+id/new_project_name_text"
        android:layout_marginTop="145dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/virtual"
        android:id="@+id/checkBox_virtual"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/search_bluetooth"
        android:layout_alignStart="@+id/search_bluetooth"
        android:checked="true" />

</RelativeLayout>